--- a/views/store.html
+++ b/views/store.html
@@ -109,24 +109,45 @@
                 <label for="filterSide" class="headLine">
                     <div class="filter">
                         <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
-                        <p class="filterParagraph">Filter</p>                      </label>
+                        <p class="filtWrord">Filter</p>                      </label>
                     </div>
                 </label>
                 <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
                 </p>
                 <nav class="menuFilter">
-                        <label for="filterSide">
-                            <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
-                        </label>
-
+                    <label for="filterSide">
+                        <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
+                    </label>
                     <div class="choiceFilter">
-                        <ul>
-                            <li><a href="sign_In.html" class="link">Sign in</a></li>
-                            <li><a href="#" class="link">My cart</a></li>
-                            <li><a href="../index.html" class="link">Home</a></li>
-                            <li><a href="store.html" class="link">Store</a></li>
-                            <li><a href="../index.html#giftCards" class="link">Gift cards</a></li>
-                        </ul>
+                        <div class="sectionAvailability">
+                            <h3 class="titleAvailability">Availability</h3>
+                            <ul class="availability">
+                                <li><label for="" class=""></label>
+                                    <input type="checkbox">In-stock
+                                </li>
+                                <li><label for="" class=""></label>
+                                    <input type="checkbox">New Arrivals
+                                </li>
+                                <li><label for="" class=""></label>
+                                    <input type="checkbox">Sold-out
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="sectionPricing">
+                            <h3 class="titlePricing">Pricing</h3>
+                            <ul class="pricing">
+                                <li><label for="" class=""></label>
+                                    <input type="checkbox">$499
+                                </li>
+                                <li><label for="" class=""></label>
+                                    <input type="checkbox">$599
+                                </li>
+                                <li><label for="" class=""></label>
+                                    <input type="checkbox">$999
+                                </li>
+                            </ul>
+                        </div>
+                        <input class="btnAccion" type="submit" placeholder="Filter">
                     </div>
                 </nav>
             </article>
