--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -144,7 +144,7 @@
                         margin: 5px;
                         box-shadow: 0 0 4px 2px #707070;
                     }
-                    .filterParagraph{
+                    .filterWord{
                         font-size: 0.8rem;
                         font-family: $fontJura;
                         color: #D9D9D9;
@@ -153,14 +153,14 @@
                         margin: 5px;
                     }
                 }
-                p{
-                    font-size: 1rem;
-                    font-family: $fontJura;
-                    color: #D9D9D9;
-                    font-weight: 400;
-                    padding: 5px;
-                    margin: 5px;
-                }
+            }
+            p{
+                font-size: 1rem;
+                font-family: $fontJura;
+                color: #D9D9D9;
+                font-weight: 400;
+                padding: 5px;
+                margin: 5px;
             }
             .menuFilter{
                 width:20vw;
@@ -183,6 +183,9 @@
                     .closeCross{
                         width:20px;
                         cursor: pointer;
+                        position: absolute;
+                        top:20px;
+                        right:25px;
                         transform: scale(100%);
                         transition: all 0.3s ease-in-out;
                     }
