--- a/css/main.css
+++ b/css/main.css
@@ -835,7 +835,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   left: 0;
   z-index: 10px;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
   background-color: #ffffff;
   overflow: hidden;
@@ -853,20 +853,53 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transform: scale(100%);
   transition: all 0.3s ease-in-out;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter ul li {
-  list-style-type: none;
-  padding: 10px 0px;
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 0px auto;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter ul li .link {
-  text-decoration: none;
-  color: rgb(194, 193, 193);
-  font-size: 0.9rem;
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .filterWord {
+  width: inherit;
+  font-size: 1.3rem;
   font-family: "Jura", sans-serif;
-  transition: all 0.5s;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 0px auto;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #e4e4e4;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter ul li .link:hover {
-  text-decoration: underline;
-  filter: drop-shadow(0 0 6px #BC2327);
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing {
+  width: inherit;
+  margin: 0px auto;
+  padding: 30px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .titleAvailability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .titlePricing, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .titleAvailability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .titlePricing {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 15px 0px;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .btnFilter {
+  width: 90%;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 30px auto;
+  color: white;
+  background-color: #070707;
+  border: 1px solid #070707;
+  transition: all 0.3s ease;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .btnFilter:hover {
+  border: 1px solid #BC2327;
+  background-color: #BC2327;
 }
 
 .newArrivals {
