--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -171,7 +171,7 @@
                 left:0;
                 z-index: 10px;
                 flex-direction: column;
-                justify-content:space-between;
+                justify-content:center;
                 align-items: flex-start;
                 background-color: #ffffff;
                 overflow: hidden;
@@ -191,20 +191,50 @@
                     }
                 }
                 .choiceFilter{
-                    ul{
-                        li{
-                            list-style-type: none;
-                            padding: 10px 0px;
-                            .link{
-                                text-decoration: none;
-                                color:rgb(194, 193, 193);
-                                font-size: .9rem;
-                                font-family: $fontJura;transition:all .5s;
-                                &:hover{
-                                    text-decoration: underline;
-                                    filter: drop-shadow(0 0 6px #BC2327);
-                                }
-                            }
+                    width: 90%;
+                    display: flex;
+                    flex-direction:column;
+                    justify-content: space-between;
+                    align-items:flex-start;
+                    margin: 0px auto;
+                    .filterWord{
+                        width: inherit;
+                        font-size: 1.3rem;
+                        font-family: $fontJura;
+                        color:#BC2327;
+                        font-weight: 600;
+                        margin:0px auto ;
+                        padding-bottom: 30px;
+                        border-bottom: 1px solid #e4e4e4;
+                    }
+                    .sectionAvailability, .sectionPricing{
+                        width: inherit;
+                        margin:0px auto ;
+                        padding: 30px 0px;
+                        border-bottom: 1px solid #e4e4e4;
+                        .titleAvailability, .titlePricing{
+                            font-size: 1rem;
+                            font-family: $fontJura;
+                            color:#BC2327;
+                            font-weight: 600;
+                            margin: 15px 0px;
+                        }
+                    }
+                    .btnFilter{
+                        width: 90%;
+                        padding: 10px 20px;
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        margin:30px auto;
+                        color: white;
+                        background-color: #070707;
+                        border: 1px solid #070707;
+                        transition: all 0.3s ease;
+                        &:hover{
+                            border: 1px solid #BC2327;
+                            background-color: #BC2327;
                         }
                     }
                 }
