--- a/views/store.html
+++ b/views/store.html
@@ -109,7 +109,7 @@
                 <label for="filterSide" class="headLine">
                     <div class="filter">
                         <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
-                        <p class="filtWrord">Filter</p>                      </label>
+                        <p class="filterWrord">Filter</p>                      </label>
                     </div>
                 </label>
                 <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
@@ -119,35 +119,39 @@
                         <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
                     </label>
                     <div class="choiceFilter">
+                        <h3 class="filterWord">Filter</h3>
                         <div class="sectionAvailability">
                             <h3 class="titleAvailability">Availability</h3>
-                            <ul class="availability">
-                                <li><label for="" class=""></label>
-                                    <input type="checkbox">In-stock
-                                </li>
-                                <li><label for="" class=""></label>
-                                    <input type="checkbox">New Arrivals
-                                </li>
-                                <li><label for="" class=""></label>
-                                    <input type="checkbox">Sold-out
-                                </li>
-                            </ul>
+                            <article class="availability">
+                                <div>
+                                    <label for="inStock" class=""></label>
+                                    <input type="checkbox" id="inStock">In-stock
+                                </div>
+                                <div>
+                                <label for="newArrivals" class=""></label>
+                                    <input type="checkbox" id="newArrivals">New Arrivals
+                                </div>
+                                <div>
+                                    <label for="soldOut" class=""></label>
+                                    <input type="checkbox"  id="soldOut">Sold-out
+                                </div>
+                            </article>
                         </div>
                         <div class="sectionPricing">
                             <h3 class="titlePricing">Pricing</h3>
-                            <ul class="pricing">
-                                <li><label for="" class=""></label>
-                                    <input type="checkbox">$499
-                                </li>
-                                <li><label for="" class=""></label>
-                                    <input type="checkbox">$599
-                                </li>
-                                <li><label for="" class=""></label>
-                                    <input type="checkbox">$999
-                                </li>
-                            </ul>
+                            <article class="pricing">
+                                <div><label for="priceOne" class=""></label>
+                                    <input type="checkbox" id="priceOne">$499
+                                </div>
+                                <div><label for="priceTwo" class=""></label>
+                                    <input type="checkbox" id="priceTwo">$599
+                                </div>
+                                <div><label for="priceThree" class=""></label>
+                                    <input type="checkbox" id="priceThree">$999
+                                </div>
+                            </article>
                         </div>
-                        <input class="btnAccion" type="submit" placeholder="Filter">
+                        <input class="btnFilter" type="submit" placeholder="Filter">
                     </div>
                 </nav>
             </article>
