--- a/css/main.css
+++ b/css/main.css
@@ -794,6 +794,10 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transform: translate(0%);
 }
 .containerStore .sectionFilter .menuFilterSide .headLine .filter {
+  position: fixed;
+  top: 80px;
+  left: 20px;
+  z-index: 10;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
