--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -129,6 +129,10 @@
             }
             .headLine{
                 .filter{
+                    position: fixed;
+                    top:80px;
+                    left: 20px;
+                    z-index: 10;
                     display: flex;
                     flex-direction: row;
                     flex-wrap: nowrap;
