--- a/css/main.css
+++ b/css/main.css
@@ -183,10 +183,16 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   width: 45px;
 }
 .header .menuSide .top label .close {
-  width: 20px;
+  width: 25px;
   cursor: pointer;
-  transform: scale(100%);
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  transform: rotate(0deg);
   transition: all 0.3s ease-in-out;
+}
+.header .menuSide .top label .close:hover {
+  transform: rotate(270deg);
 }
 .header .menuSide .menu ul li {
   list-style-type: none;
@@ -795,14 +801,13 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 }
 .containerStore .sectionFilter .menuFilterSide .headLine .filter {
   position: fixed;
-  top: 80px;
+  top: 70px;
   left: 20px;
-  z-index: 10;
+  z-index: 5;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
   padding: 5px;
   cursor: pointer;
 }
@@ -819,8 +824,6 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   font-family: "Jura", sans-serif;
   color: #D9D9D9;
   font-weight: 400;
-  padding: 5px;
-  margin: 5px;
 }
 .containerStore .sectionFilter .menuFilterSide p {
   font-size: 1rem;
@@ -828,7 +831,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   color: #D9D9D9;
   font-weight: 400;
   padding: 5px;
-  margin: 5px;
+  margin: 0px 0px 40px;
 }
 .containerStore .sectionFilter .menuFilterSide .menuFilter {
   width: 20vw;
@@ -849,13 +852,16 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transition: 0.3s ease-in-out;
 }
 .containerStore .sectionFilter .menuFilterSide .menuFilter label .closeCross {
-  width: 20px;
+  width: 15px;
   cursor: pointer;
   position: absolute;
   top: 20px;
   right: 25px;
-  transform: scale(100%);
+  transform: rotate(0deg);
   transition: all 0.3s ease-in-out;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter label .closeCross:hover {
+  transform: rotate(270deg);
 }
 .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter {
   width: 90%;
@@ -896,14 +902,20 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   justify-content: center;
   align-items: center;
   margin: 30px auto;
-  color: white;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+  color: #ffffff;
+  border: 0px solid transparent;
   background-color: #070707;
-  border: 1px solid #070707;
   transition: all 0.3s ease;
 }
 .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .btnFilter:hover {
-  border: 1px solid #BC2327;
-  background-color: #BC2327;
+  color: #070707;
+  background-color: #ffffff;
+  box-shadow: 0 0 4px 2px #707070;
+  border: 0px solid transparent;
+  font-weight: 600;
 }
 
 .newArrivals {
