--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -104,10 +104,16 @@
             }
             label{
                 .close{
-                    width:20px;
+                    width:25px;
                     cursor: pointer;
-                    transform: scale(100%);
+                    position: absolute;
+                    top:20px;
+                    right:25px;
+                    transform: rotate(0deg);
                     transition: all 0.3s ease-in-out;
+                    &:hover{
+                        transform: rotate(270deg);
+                    }
                 }
             }
         }
