--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -130,14 +130,13 @@
             .headLine{
                 .filter{
                     position: fixed;
-                    top:80px;
-                    left: 20px;
-                    z-index: 10;
+                    top:70px;
+                    left:20px;
+                    z-index: 5;
                     display: flex;
-                    flex-direction: row;
-                    flex-wrap: nowrap;
-                    justify-content: center;
-                    align-items: center;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: flex-start;
                     padding: 5px;
                     cursor:pointer;
                     .filterIcon{
@@ -153,8 +152,6 @@
                         font-family: $fontJura;
                         color: #D9D9D9;
                         font-weight: 400;
-                        padding: 5px;
-                        margin: 5px;
                     }
                 }
             }
@@ -164,7 +161,7 @@
                 color: #D9D9D9;
                 font-weight: 400;
                 padding: 5px;
-                margin: 5px;
+                margin: 0px 0px 40px;
             }
             .menuFilter{
                 width:20vw;
@@ -185,13 +182,17 @@
                 transition: .3s ease-in-out;
                 label{
                     .closeCross{
-                        width:20px;
+                        width:15px;
                         cursor: pointer;
                         position: absolute;
                         top:20px;
                         right:25px;
-                        transform: scale(100%);
+                        transform: rotate(0deg);
                         transition: all 0.3s ease-in-out;
+                        &:hover{
+                            transform: rotate(270deg);
+                        }
+
                     }
                 }
                 .choiceFilter{
@@ -232,13 +233,19 @@
                         justify-content: center;
                         align-items: center;
                         margin:30px auto;
-                        color: white;
+                        font-size: 1rem;
+                        font-family: $fontJura;
+                        font-weight: 600;
+                        color: #ffffff;
+                        border: 0px solid transparent;
                         background-color: #070707;
-                        border: 1px solid #070707;
                         transition: all 0.3s ease;
                         &:hover{
-                            border: 1px solid #BC2327;
-                            background-color: #BC2327;
+                            color: #070707;
+                            background-color: #ffffff;
+                            box-shadow: 0 0 4px 2px #707070;
+                            border: 0px solid transparent;
+                            font-weight: 600;
                         }
                     }
                 }
