Create Cart & Favorities at Store Category

--- a/views/store.html
+++ b/views/store.html
@@ -158,11 +158,111 @@
         </section>
 
         <section class="cart">
-
+            <article class="menuFilterSide">
+                <input id="filterSide" type="checkbox">
+                <label for="filterSide" class="headLine">
+                    <div class="filter">
+                        <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
+                        <p class="filterWrord">Filter</p>                      </label>
+                    </div>
+                </label>
+                <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
+                </p>
+                <nav class="menuFilter">
+                    <label for="filterSide">
+                        <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
+                    </label>
+                    <div class="choiceFilter">
+                        <h3 class="filterWord">Filter</h3>
+                        <div class="sectionAvailability">
+                            <h3 class="titleAvailability">Availability</h3>
+                            <article class="availability">
+                                <div>
+                                    <label for="inStock" class=""></label>
+                                    <input type="checkbox" id="inStock">In-stock
+                                </div>
+                                <div>
+                                <label for="newArrivals" class=""></label>
+                                    <input type="checkbox" id="newArrivals">New Arrivals
+                                </div>
+                                <div>
+                                    <label for="soldOut" class=""></label>
+                                    <input type="checkbox"  id="soldOut">Sold-out
+                                </div>
+                            </article>
+                        </div>
+                        <div class="sectionPricing">
+                            <h3 class="titlePricing">Pricing</h3>
+                            <article class="pricing">
+                                <div><label for="priceOne" class=""></label>
+                                    <input type="checkbox" id="priceOne">$499
+                                </div>
+                                <div><label for="priceTwo" class=""></label>
+                                    <input type="checkbox" id="priceTwo">$599
+                                </div>
+                                <div><label for="priceThree" class=""></label>
+                                    <input type="checkbox" id="priceThree">$999
+                                </div>
+                            </article>
+                        </div>
+                        <input class="btnFilter" type="submit" placeholder="Filter">
+                    </div>
+                </nav>
+            </article>
         </section>
 
         <section class="whishList">
-
+            <article class="menuFilterSide">
+                <input id="filterSide" type="checkbox">
+                <label for="filterSide" class="headLine">
+                    <div class="filter">
+                        <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
+                        <p class="filterWrord">Filter</p>                      </label>
+                    </div>
+                </label>
+                <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
+                </p>
+                <nav class="menuFilter">
+                    <label for="filterSide">
+                        <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
+                    </label>
+                    <div class="choiceFilter">
+                        <h3 class="filterWord">Filter</h3>
+                        <div class="sectionAvailability">
+                            <h3 class="titleAvailability">Availability</h3>
+                            <article class="availability">
+                                <div>
+                                    <label for="inStock" class=""></label>
+                                    <input type="checkbox" id="inStock">In-stock
+                                </div>
+                                <div>
+                                <label for="newArrivals" class=""></label>
+                                    <input type="checkbox" id="newArrivals">New Arrivals
+                                </div>
+                                <div>
+                                    <label for="soldOut" class=""></label>
+                                    <input type="checkbox"  id="soldOut">Sold-out
+                                </div>
+                            </article>
+                        </div>
+                        <div class="sectionPricing">
+                            <h3 class="titlePricing">Pricing</h3>
+                            <article class="pricing">
+                                <div><label for="priceOne" class=""></label>
+                                    <input type="checkbox" id="priceOne">$499
+                                </div>
+                                <div><label for="priceTwo" class=""></label>
+                                    <input type="checkbox" id="priceTwo">$599
+                                </div>
+                                <div><label for="priceThree" class=""></label>
+                                    <input type="checkbox" id="priceThree">$999
+                                </div>
+                            </article>
+                        </div>
+                        <input class="btnFilter" type="submit" placeholder="Filter">
+                    </div>
+                </nav>
+            </article>
         </section>
 
         <!-- Store -->
