--- a/views/store.html
+++ b/views/store.html
@@ -157,7 +157,7 @@
             </article>
         </section>
 
-        <section class="cart">
+        <!-- <section class="cart">
             <article class="menuFilterSide">
                 <input id="filterSide" type="checkbox">
                 <label for="filterSide" class="headLine">
@@ -209,9 +209,9 @@
                     </div>
                 </nav>
             </article>
-        </section>
+        </section> -->
 
-        <section class="whishList">
+        <!-- <section class="whishList">
             <article class="menuFilterSide">
                 <input id="filterSide" type="checkbox">
                 <label for="filterSide" class="headLine">
@@ -263,7 +263,7 @@
                     </div>
                 </nav>
             </article>
-        </section>
+        </section> -->
 
         <!-- Store -->
 
