--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -105,6 +105,11 @@
                 font-size: 0.5rem;
                 color:rgb(194, 193, 193);
                 margin: 0px 0px;
+                .raccoon{
+                    color: #BC2327;
+                    font-weight: 600;
+                    font-family: $fontJura;
+                }
             }
         }
     }
