--- a/views/store.html
+++ b/views/store.html
@@ -559,7 +559,7 @@
             <img class="raccoon" src="../img/logo_Raccoon.svg" alt="Raccoon brand">
             <div class="developer">
                 <p>Developed and made with 💖 by Diego Marin </p>
-                <p>© 2023 Raccoon. All rights reserved.</p>
+                <p>© 2023 <span class="raccoon">Raccoon</span>. All rights reserved.</p>
                 <p> Medellin - Colombia</p>
             </div>
         </section>
