Pushing changements whishList Menu

--- a/views/store.html
+++ b/views/store.html
@@ -211,26 +211,26 @@
             </article>
         </section> -->
 
-        <!-- <section class="whishList">
-            <article class="menuFilterSide">
-                <input id="filterSide" type="checkbox">
-                <label for="filterSide" class="headLine">
-                    <div class="filter">
-                        <img class="filterIcon" src="../img/filter_Icon.svg" alt="Filter icon">
-                        <p class="filterWrord">Filter</p>                      </label>
+        <section class="sectionwhishList">
+            <article class="menuWhishListSide">
+                <input id="whishListSide" type="checkbox">
+                <label for="whishListSide" class="whistHeadLine">
+                    <div class="whishList">
+                        <img class="whishListIcon" src="../img/whishList_Icon.svg" alt="whish list icon">
+                        <p class="whishListWord">Filter</p>                      </label>
                     </div>
                 </label>
                 <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
                 </p>
-                <nav class="menuFilter">
-                    <label for="filterSide">
+                <nav class="menuWhishList">
+                    <label for="whishListSide">
                         <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
                     </label>
-                    <div class="choiceFilter">
-                        <h3 class="filterWord">Filter</h3>
-                        <div class="sectionAvailability">
-                            <h3 class="titleAvailability">Availability</h3>
-                            <article class="availability">
+                    <div class="choiceWhishList">
+                        <h3 class="whishListWord">Filter</h3>
+                        <div class="sectionWhishList">
+                            <h3 class="titleWhishList">Availability</h3>
+                            <article class="whishList">
                                 <div>
                                     <label for="inStock" class=""></label>
                                     <input type="checkbox" id="inStock">In-stock
@@ -245,9 +245,9 @@
                                 </div>
                             </article>
                         </div>
-                        <div class="sectionPricing">
-                            <h3 class="titlePricing">Pricing</h3>
-                            <article class="pricing">
+                        <div class="sectionWhisList">
+                            <h3 class="titleWhishList">Pricing</h3>
+                            <article class="whisList">
                                 <div><label for="priceOne" class=""></label>
                                     <input type="checkbox" id="priceOne">$499
                                 </div>
@@ -263,7 +263,7 @@
                     </div>
                 </nav>
             </article>
-        </section> -->
+        </section>
 
         <!-- Store -->
 
