--- a/css/main.css
+++ b/css/main.css
@@ -917,6 +917,137 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   border: 0px solid transparent;
   font-weight: 600;
 }
+.containerStore .sectionFilter .menuFilterSide {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.containerStore .sectionFilter .menuFilterSide #filterSide {
+  display: none;
+}
+.containerStore .sectionFilter .menuFilterSide #filterSide:checked ~ .menuFilter {
+  transform: translate(0%);
+}
+.containerStore .sectionFilter .menuFilterSide .headLine .filter {
+  position: fixed;
+  top: 70px;
+  left: 20px;
+  z-index: 5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 5px;
+  cursor: pointer;
+}
+.containerStore .sectionFilter .menuFilterSide .headLine .filter .filterIcon {
+  width: 35px;
+  background-color: #D9D9D9;
+  border-radius: 50%;
+  padding: 5px;
+  margin: 5px;
+  box-shadow: 0 0 4px 2px #707070;
+}
+.containerStore .sectionFilter .menuFilterSide .headLine .filter .filterWord {
+  font-size: 0.8rem;
+  font-family: "Jura", sans-serif;
+  color: #D9D9D9;
+  font-weight: 400;
+}
+.containerStore .sectionFilter .menuFilterSide p {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #D9D9D9;
+  font-weight: 400;
+  padding: 5px;
+  margin: 0px 0px 40px;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter {
+  width: 20vw;
+  height: 100vh;
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-color: #ffffff;
+  overflow: hidden;
+  box-shadow: 0 0 10px 6px #070707;
+  z-index: 10;
+  transform: translate(-100%);
+  transition: 0.3s ease-in-out;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter label .closeCross {
+  width: 15px;
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 25px;
+  transform: rotate(0deg);
+  transition: all 0.3s ease-in-out;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter label .closeCross:hover {
+  transform: rotate(270deg);
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter {
+  width: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 0px auto;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .filterWord {
+  width: inherit;
+  font-size: 1.3rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 0px auto;
+  padding-bottom: 30px;
+  border-bottom: 1px solid #e4e4e4;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing {
+  width: inherit;
+  margin: 0px auto;
+  padding: 30px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .titleAvailability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .titlePricing, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .titleAvailability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .titlePricing {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 15px 0px;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .btnFilter {
+  width: 90%;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 30px auto;
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  font-weight: 600;
+  color: #ffffff;
+  border: 0px solid transparent;
+  background-color: #070707;
+  transition: all 0.3s ease;
+}
+.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .btnFilter:hover {
+  color: #070707;
+  background-color: #ffffff;
+  box-shadow: 0 0 4px 2px #707070;
+  border: 0px solid transparent;
+  font-weight: 600;
+}
 
 .newArrivals {
   width: 100%;
