--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -251,8 +251,8 @@
             }
         }
     }
-    .sectionFilter{
-        .menuFilterSide{
+    .sectionWhishList{
+        .menuWhishListSide{
             width: 100%;
             display: flex;
             flex-direction: row;
