--- a/views/store.html
+++ b/views/store.html
@@ -213,53 +213,43 @@
 
         <section class="sectionwhishList">
             <article class="menuWhishListSide">
+
                 <input id="whishListSide" type="checkbox">
                 <label for="whishListSide" class="whistHeadLine">
-                    <div class="whishList">
-                        <img class="whishListIcon" src="../img/whishList_Icon.svg" alt="whish list icon">
-                        <p class="whishListWord">Filter</p>                      </label>
-                    </div>
                 </label>
-                <p>"Explore a world of possibilities in our online store and make your dreams come true with just one click!"
-                </p>
+
                 <nav class="menuWhishList">
                     <label for="whishListSide">
                         <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
                     </label>
                     <div class="choiceWhishList">
-                        <h3 class="whishListWord">Filter</h3>
+                        <h3 class="whishListWord">WhishList</h3>
                         <div class="sectionWhishList">
-                            <h3 class="titleWhishList">Availability</h3>
+                            <div class="category">
+                                <h3 class="titleWhishList">Item</h3>
+                                <h3 class="titleWhishList">Pricing</h3>
+                            </div>
                             <article class="whishList">
-                                <div>
-                                    <label for="inStock" class=""></label>
-                                    <input type="checkbox" id="inStock">In-stock
+                                <div class="blockProduct">
+                                    <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
+                                    <div class="description">
+                                        <img src="../img/trash_Icon.svg" alt="Trash icon">
+                                        <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                    </div>
+                                    <img class="itemWhishList" src="../img/whishlist_Icon.svg" alt="WhishList icon">
                                 </div>
-                                <div>
-                                <label for="newArrivals" class=""></label>
-                                    <input type="checkbox" id="newArrivals">New Arrivals
-                                </div>
-                                <div>
-                                    <label for="soldOut" class=""></label>
-                                    <input type="checkbox"  id="soldOut">Sold-out
+                            </article>
+                            <article class="whishList">
+                                <div class="blockProduct">
+                                    <img class="itemProduct" src="../img/pic25.webp" alt="Product pic">
+                                    <div class="description">
+                                        <img src="../img/trash_Icon.svg" alt="Trash icon">
+                                        <img src="../img/edit_Icon.svg" alt="Edit icon">
+                                    </div>
+                                    <img class="itemWhishList" src="../img/whishlist_Icon.svg" alt="WhishList icon">
                                 </div>
                             </article>
                         </div>
-                        <div class="sectionWhisList">
-                            <h3 class="titleWhishList">Pricing</h3>
-                            <article class="whisList">
-                                <div><label for="priceOne" class=""></label>
-                                    <input type="checkbox" id="priceOne">$499
-                                </div>
-                                <div><label for="priceTwo" class=""></label>
-                                    <input type="checkbox" id="priceTwo">$599
-                                </div>
-                                <div><label for="priceThree" class=""></label>
-                                    <input type="checkbox" id="priceThree">$999
-                                </div>
-                            </article>
-                        </div>
-                        <input class="btnFilter" type="submit" placeholder="Filter">
                     </div>
                 </nav>
             </article>
