--- a/css/main.css
+++ b/css/main.css
@@ -917,20 +917,20 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   border: 0px solid transparent;
   font-weight: 600;
 }
-.containerStore .sectionFilter .menuFilterSide {
+.containerStore .sectionWhishList .menuWhishListSide {
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
-.containerStore .sectionFilter .menuFilterSide #filterSide {
+.containerStore .sectionWhishList .menuWhishListSide #filterSide {
   display: none;
 }
-.containerStore .sectionFilter .menuFilterSide #filterSide:checked ~ .menuFilter {
+.containerStore .sectionWhishList .menuWhishListSide #filterSide:checked ~ .menuFilter {
   transform: translate(0%);
 }
-.containerStore .sectionFilter .menuFilterSide .headLine .filter {
+.containerStore .sectionWhishList .menuWhishListSide .headLine .filter {
   position: fixed;
   top: 70px;
   left: 20px;
@@ -942,7 +942,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   padding: 5px;
   cursor: pointer;
 }
-.containerStore .sectionFilter .menuFilterSide .headLine .filter .filterIcon {
+.containerStore .sectionWhishList .menuWhishListSide .headLine .filter .filterIcon {
   width: 35px;
   background-color: #D9D9D9;
   border-radius: 50%;
@@ -950,13 +950,13 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   margin: 5px;
   box-shadow: 0 0 4px 2px #707070;
 }
-.containerStore .sectionFilter .menuFilterSide .headLine .filter .filterWord {
+.containerStore .sectionWhishList .menuWhishListSide .headLine .filter .filterWord {
   font-size: 0.8rem;
   font-family: "Jura", sans-serif;
   color: #D9D9D9;
   font-weight: 400;
 }
-.containerStore .sectionFilter .menuFilterSide p {
+.containerStore .sectionWhishList .menuWhishListSide p {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   color: #D9D9D9;
@@ -964,7 +964,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   padding: 5px;
   margin: 0px 0px 40px;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter {
+.containerStore .sectionWhishList .menuWhishListSide .menuFilter {
   width: 20vw;
   height: 100vh;
   display: flex;
@@ -982,7 +982,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transform: translate(-100%);
   transition: 0.3s ease-in-out;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter label .closeCross {
+.containerStore .sectionWhishList .menuWhishListSide .menuFilter label .closeCross {
   width: 15px;
   cursor: pointer;
   position: absolute;
@@ -991,10 +991,10 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transform: rotate(0deg);
   transition: all 0.3s ease-in-out;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter label .closeCross:hover {
+.containerStore .sectionWhishList .menuWhishListSide .menuFilter label .closeCross:hover {
   transform: rotate(270deg);
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter {
+.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter {
   width: 90%;
   display: flex;
   flex-direction: column;
@@ -1002,7 +1002,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   align-items: flex-start;
   margin: 0px auto;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .filterWord {
+.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .filterWord {
   width: inherit;
   font-size: 1.3rem;
   font-family: "Jura", sans-serif;
@@ -1012,20 +1012,20 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   padding-bottom: 30px;
   border-bottom: 1px solid #e4e4e4;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing {
+.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionAvailability, .containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionPricing {
   width: inherit;
   margin: 0px auto;
   padding: 30px 0px;
   border-bottom: 1px solid #e4e4e4;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .titleAvailability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionAvailability .titlePricing, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .titleAvailability, .containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .sectionPricing .titlePricing {
+.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionAvailability .titleAvailability, .containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionAvailability .titlePricing, .containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionPricing .titleAvailability, .containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionPricing .titlePricing {
   font-size: 1rem;
   font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
   margin: 15px 0px;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .btnFilter {
+.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .btnFilter {
   width: 90%;
   padding: 10px 20px;
   display: flex;
@@ -1041,7 +1041,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   background-color: #070707;
   transition: all 0.3s ease;
 }
-.containerStore .sectionFilter .menuFilterSide .menuFilter .choiceFilter .btnFilter:hover {
+.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .btnFilter:hover {
   color: #070707;
   background-color: #ffffff;
   box-shadow: 0 0 4px 2px #707070;
