--- a/views/store.html
+++ b/views/store.html
@@ -41,8 +41,11 @@
             <ul>
                 <li><a href="#"><img class="icon" src="../img/moon_Icon.svg" alt=""></a></li>
                 <li><a href="sign_In.html"><img class="icon" src="../img/user_Icon.svg" alt=""></a></li>
-                <li><a href="#"><img class="icon" src="../img/whishlist_White_Icon.svg" alt=""></a></li>
-                <li><a href="#"><img class="icon" src="../img/empty_Shopping_Cart.svg" alt=""></a></li>
+                <input id="whishListSide" type="checkbox">
+                <label for="whishListSide" class="whishHeadLine">
+                    <li><img class="icon" src="../img/whishlist_White_Icon.svg" alt=""></li>
+                </label>
+                <li><img class="icon" src="../img/empty_Shopping_Cart.svg" alt=""></li>
             </ul>
         </section>
         <nav class="menuSide">
@@ -211,12 +214,8 @@
             </article>
         </section> -->
 
-        <section class="sectionwhishList">
+        <section class="sectionWhishList">
             <article class="menuWhishListSide">
-
-                <input id="whishListSide" type="checkbox">
-                <label for="whishListSide" class="whistHeadLine">
-                </label>
 
                 <nav class="menuWhishList">
                     <label for="whishListSide">
