--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -73,6 +73,26 @@
                     }
                 }
             }
+            #whishListSide{
+                display: none;
+                &:checked ~ .menuFilter{
+                    transform: translate(0%);
+                }
+            }
+            .whishHeadLine{
+                li{
+                    .icon{
+                        margin: 0px 5px;
+                        transform: scale(100%);
+                        transition: transform 0.3s ease-in-out;
+                        &:hover{
+                            transform: scale(103%);
+                            filter:drop-shadow(0 0 10px #696061);
+                        }
+                    }
+                }
+
+            }
         }
     }
     .menuSide{
