Failure whishList Menu

--- a/views/store.html
+++ b/views/store.html
@@ -214,11 +214,13 @@
             </article>
         </section> -->
 
+        <!-- WhishList -->
+
         <section class="sectionWhishList">
             <article class="menuWhishListSide">
 
                 <nav class="menuWhishList">
-                    <label for="whishListSide">
+                    <label for="whishListSide" class="whishHeadLine">
                         <img class="closeCross" src="../img/close_Cross.svg" alt="Close cross icon">
                     </label>
                     <div class="choiceWhishList">
