--- a/css/main.css
+++ b/css/main.css
@@ -156,10 +156,11 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
 .header .menuIcons ul #whishListSide {
   display: none;
 }
-.header .menuIcons ul #whishListSide:checked ~ .menuFilter {
+.header .menuIcons ul #whishListSide:checked ~ .menuWhishList {
   transform: translate(0%);
 }
 .header .menuIcons ul .whishHeadLine li .icon {
+  cursor: pointer;
   margin: 0px 5px;
   transform: scale(100%);
   transition: transform 0.3s ease-in-out;
@@ -932,86 +933,36 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   border: 0px solid transparent;
   font-weight: 600;
 }
-.containerStore .sectionWhishList .menuWhishListSide {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-.containerStore .sectionWhishList .menuWhishListSide .headLine .filter {
-  position: fixed;
-  top: 70px;
-  left: 20px;
-  z-index: 5;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding: 5px;
-  cursor: pointer;
-}
-.containerStore .sectionWhishList .menuWhishListSide .headLine .filter .filterIcon {
-  width: 35px;
-  background-color: #D9D9D9;
-  border-radius: 50%;
-  padding: 5px;
-  margin: 5px;
-  box-shadow: 0 0 4px 2px #707070;
-}
-.containerStore .sectionWhishList .menuWhishListSide .headLine .filter .filterWord {
-  font-size: 0.8rem;
-  font-family: "Jura", sans-serif;
-  color: #D9D9D9;
-  font-weight: 400;
-}
-.containerStore .sectionWhishList .menuWhishListSide p {
-  font-size: 1rem;
-  font-family: "Jura", sans-serif;
-  color: #D9D9D9;
-  font-weight: 400;
-  padding: 5px;
-  margin: 0px 0px 40px;
-}
-.containerStore .sectionWhishList .menuWhishListSide .menuFilter {
-  width: 20vw;
+.containerStore .sectionWhishList .menuWhishListSide .menuWhishList {
+  width: 30vw;
   height: 100vh;
-  display: flex;
   position: fixed;
   top: 0;
-  left: 0;
-  z-index: 10px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  right: 0;
   background-color: #ffffff;
-  overflow: hidden;
-  box-shadow: 0 0 10px 6px #070707;
   z-index: 10;
-  transform: translate(-100%);
-  transition: 0.3s ease-in-out;
 }
-.containerStore .sectionWhishList .menuWhishListSide .menuFilter label .closeCross {
+.containerStore .sectionWhishList .menuWhishListSide .menuWhishList .whishHeadLine .closeCross {
   width: 15px;
   cursor: pointer;
   position: absolute;
   top: 20px;
-  right: 25px;
+  left: 35px;
   transform: rotate(0deg);
   transition: all 0.3s ease-in-out;
 }
-.containerStore .sectionWhishList .menuWhishListSide .menuFilter label .closeCross:hover {
+.containerStore .sectionWhishList .menuWhishListSide .menuWhishList .whishHeadLine .closeCross:hover {
   transform: rotate(270deg);
 }
-.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter {
+.containerStore .sectionWhishList .menuWhishListSide .menuWhishList .choiceWhishList {
   width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  margin: 0px auto;
+  margin: 30px auto;
 }
-.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .filterWord {
+.containerStore .sectionWhishList .menuWhishListSide .menuWhishList .choiceWhishList .whishListWord {
   width: inherit;
   font-size: 1.3rem;
   font-family: "Jura", sans-serif;
@@ -1020,42 +971,6 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   margin: 0px auto;
   padding-bottom: 30px;
   border-bottom: 1px solid #e4e4e4;
-}
-.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionAvailability, .containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionPricing {
-  width: inherit;
-  margin: 0px auto;
-  padding: 30px 0px;
-  border-bottom: 1px solid #e4e4e4;
-}
-.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionAvailability .titleAvailability, .containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionAvailability .titlePricing, .containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionPricing .titleAvailability, .containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .sectionPricing .titlePricing {
-  font-size: 1rem;
-  font-family: "Jura", sans-serif;
-  color: #BC2327;
-  font-weight: 600;
-  margin: 15px 0px;
-}
-.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .btnFilter {
-  width: 90%;
-  padding: 10px 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 30px auto;
-  font-size: 1rem;
-  font-family: "Jura", sans-serif;
-  font-weight: 600;
-  color: #ffffff;
-  border: 0px solid transparent;
-  background-color: #070707;
-  transition: all 0.3s ease;
-}
-.containerStore .sectionWhishList .menuWhishListSide .menuFilter .choiceFilter .btnFilter:hover {
-  color: #070707;
-  background-color: #ffffff;
-  box-shadow: 0 0 4px 2px #707070;
-  border: 0px solid transparent;
-  font-weight: 600;
 }
 
 .newArrivals {
