--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -75,13 +75,14 @@
             }
             #whishListSide{
                 display: none;
-                &:checked ~ .menuFilter{
+                &:checked ~ .menuWhishList{
                     transform: translate(0%);
                 }
             }
             .whishHeadLine{
                 li{
                     .icon{
+                        cursor: pointer;
                         margin: 0px 5px;
                         transform: scale(100%);
                         transition: transform 0.3s ease-in-out;
@@ -91,7 +92,6 @@
                         }
                     }
                 }
-
             }
         }
     }
