--- a/scss/_store.scss
+++ b/scss/_store.scss
@@ -192,7 +192,7 @@
                         &:hover{
                             transform: rotate(270deg);
                         }
-            }
+                    }
                 }
                 .choiceFilter{
                     width: 90%;
@@ -253,86 +253,37 @@
     }
     .sectionWhishList{
         .menuWhishListSide{
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            align-items: center;
-            .headLine{
-                .filter{
-                    position: fixed;
-                    top:70px;
-                    left:20px;
-                    z-index: 5;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: space-between;
-                    align-items: flex-start;
-                    padding: 5px;
-                    cursor:pointer;
-                    .filterIcon{
-                        width:35px;
-                        background-color: #D9D9D9;
-                        border-radius: 50%;
-                        padding: 5px;
-                        margin: 5px;
-                        box-shadow: 0 0 4px 2px #707070;
-                    }
-                    .filterWord{
-                        font-size: 0.8rem;
-                        font-family: $fontJura;
-                        color: #D9D9D9;
-                        font-weight: 400;
-                    }
-                }
-            }
-            p{
-                font-size: 1rem;
-                font-family: $fontJura;
-                color: #D9D9D9;
-                font-weight: 400;
-                padding: 5px;
-                margin: 0px 0px 40px;
-            }
-            .menuFilter{
-                width:20vw;
+            .menuWhishList{
+                width: 30vw;
                 height: 100vh;
-                display:flex;
                 position: fixed;
                 top:0;
-                left:0;
-                z-index: 10px;
-                flex-direction: column;
-                justify-content:center;
-                align-items: flex-start;
+                right:0;
                 background-color: #ffffff;
-                overflow: hidden;
-                box-shadow: 0 0 10px 6px #070707;
                 z-index: 10;
-                transform: translate(-100%);
-                transition: .3s ease-in-out;
-                label{
+
+                .whishHeadLine{
                     .closeCross{
                         width:15px;
                         cursor: pointer;
                         position: absolute;
                         top:20px;
-                        right:25px;
+                        left:35px;
                         transform: rotate(0deg);
                         transition: all 0.3s ease-in-out;
                         &:hover{
                             transform: rotate(270deg);
                         }
-            }
+                    }
                 }
-                .choiceFilter{
+                .choiceWhishList{
                     width: 90%;
                     display: flex;
                     flex-direction:column;
                     justify-content: space-between;
                     align-items:flex-start;
-                    margin: 0px auto;
-                    .filterWord{
+                    margin: 30px auto;
+                    .whishListWord{
                         width: inherit;
                         font-size: 1.3rem;
                         font-family: $fontJura;
@@ -341,49 +292,37 @@
                         margin:0px auto ;
                         padding-bottom: 30px;
                         border-bottom: 1px solid #e4e4e4;
-                    }
-                    .sectionAvailability, .sectionPricing{
-                        width: inherit;
-                        margin:0px auto ;
-                        padding: 30px 0px;
-                        border-bottom: 1px solid #e4e4e4;
-                        .titleAvailability, .titlePricing{
-                            font-size: 1rem;
-                            font-family: $fontJura;
-                            color:#BC2327;
-                            font-weight: 600;
-                            margin: 15px 0px;
-                        }
-                    }
-                    .btnFilter{
-                        width: 90%;
-                        padding: 10px 20px;
-                        display: flex;
-                        flex-direction: column;
-                        justify-content: center;
-                        align-items: center;
-                        margin:30px auto;
-                        font-size: 1rem;
-                        font-family: $fontJura;
-                        font-weight: 600;
-                        color: #ffffff;
-                        border: 0px solid transparent;
-                        background-color: #070707;
-                        transition: all 0.3s ease;
-                        &:hover{
-                            color: #070707;
-                            background-color: #ffffff;
-                            box-shadow: 0 0 4px 2px #707070;
-                            border: 0px solid transparent;
-                            font-weight: 600;
-                        }
+
                     }
                 }
             }
         }
     }
-
-
-
 }
 
+// .header{
+//     .menuIcons{
+//         ul{
+//             #whishListSide{
+//                 display: none;
+//                 &:checked ~ .menuWhishList{
+//                     transform: translate(-100%);
+//                 }
+//             }
+//             .whishHeadLine{
+//                 li{
+//                     .icon{
+//                         cursor: pointer;
+//                         margin: 0px 5px;
+//                         transform: scale(100%);
+//                         transition: transform 0.3s ease-in-out;
+//                         &:hover{
+//                             transform: scale(103%);
+//                             filter:drop-shadow(0 0 10px #696061);
+//                         }
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
