--- a/css/main.css
+++ b/css/main.css
@@ -153,21 +153,21 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transform: scale(103%);
   filter: drop-shadow(0 0 10px #696061);
 }
-.header .menuIcons ul #whishListSide {
-  display: none;
-}
-.header .menuIcons ul #whishListSide:checked ~ .menuWhishList {
-  transform: translate(0%);
-}
-.header .menuIcons ul .whishHeadLine li .icon {
+.header .whishHeadLine .whishListIcon {
   cursor: pointer;
   margin: 0px 5px;
   transform: scale(100%);
   transition: transform 0.3s ease-in-out;
 }
-.header .menuIcons ul .whishHeadLine li .icon:hover {
+.header .whishHeadLine .whishListIcon:hover {
   transform: scale(103%);
   filter: drop-shadow(0 0 10px #696061);
+}
+.header #whishListSide {
+  display: none;
+}
+.header #whishListSide:checked ~ .sectionWhishList {
+  transform: translate(100%);
 }
 .header .menuSide {
   width: 20vw;
@@ -933,16 +933,26 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   border: 0px solid transparent;
   font-weight: 600;
 }
-.containerStore .sectionWhishList .menuWhishListSide .menuWhishList {
-  width: 30vw;
+.containerStore .sectionWhishList {
+  width: 25vw;
   height: 100vh;
+  display: flex;
   position: fixed;
   top: 0;
   right: 0;
+  z-index: 10px;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   background-color: #ffffff;
+  overflow: hidden;
+  box-shadow: 0 0 10px 6px #070707;
   z-index: 10;
+  transform: translate(0%);
+  padding-top: 60px;
+  transition: 0.3s ease-in-out;
 }
-.containerStore .sectionWhishList .menuWhishListSide .menuWhishList .whishHeadLine .closeCross {
+.containerStore .sectionWhishList .whishHeadLine .closeCross {
   width: 15px;
   cursor: pointer;
   position: absolute;
@@ -951,26 +961,64 @@ html .mainContainer .skullSocialMedia .socialMedia ul li .item .itemSocial {
   transform: rotate(0deg);
   transition: all 0.3s ease-in-out;
 }
-.containerStore .sectionWhishList .menuWhishListSide .menuWhishList .whishHeadLine .closeCross:hover {
+.containerStore .sectionWhishList .whishHeadLine .closeCross:hover {
   transform: rotate(270deg);
 }
-.containerStore .sectionWhishList .menuWhishListSide .menuWhishList .choiceWhishList {
-  width: 90%;
+.containerStore .sectionWhishList .menuWhishList .choiceWhishList {
+  width: 80%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: flex-start;
-  margin: 30px auto;
+  margin: 0px auto;
 }
-.containerStore .sectionWhishList .menuWhishListSide .menuWhishList .choiceWhishList .whishListWord {
+.containerStore .sectionWhishList .menuWhishList .choiceWhishList .whishListWord {
   width: inherit;
   font-size: 1.3rem;
   font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
-  margin: 0px auto;
-  padding-bottom: 30px;
+  margin: 0px;
+}
+.containerStore .sectionWhishList .menuWhishList .choiceWhishList .whish .category {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 20px 0px;
   border-bottom: 1px solid #e4e4e4;
+}
+.containerStore .sectionWhishList .menuWhishList .choiceWhishList .whish .category .titleWhishList {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+  margin: 15px 0px;
+}
+.containerStore .sectionWhishList .menuWhishList .choiceWhishList .whish .whishList .blockProduct {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px 0px;
+  border-bottom: 1px solid #e4e4e4;
+}
+.containerStore .sectionWhishList .menuWhishList .choiceWhishList .whish .whishList .blockProduct .itemProduct {
+  width: 15%;
+}
+.containerStore .sectionWhishList .menuWhishList .choiceWhishList .whish .whishList .blockProduct .description {
+  display: flex;
+  flex-direction: column;
+  margin-left: -40px;
+}
+.containerStore .sectionWhishList .menuWhishList .choiceWhishList .whish .whishList .blockProduct .description .price {
+  font-size: 1rem;
+  font-family: "Jura", sans-serif;
+  color: #BC2327;
+  font-weight: 600;
+}
+.containerStore .sectionWhishList .menuWhishList .choiceWhishList .whish .whishList .blockProduct .description .icons img {
+  width: 20px;
 }
 
 .newArrivals {
