--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -73,26 +73,25 @@
                     }
                 }
             }
-            #whishListSide{
-                display: none;
-                &:checked ~ .menuWhishList{
-                    transform: translate(0%);
-                }
+        }
+    }
+
+    .whishHeadLine{
+        .whishListIcon{
+            cursor: pointer;
+            margin: 0px 5px;
+            transform: scale(100%);
+            transition: transform 0.3s ease-in-out;
+            &:hover{
+                transform: scale(103%);
+                filter:drop-shadow(0 0 10px #696061);
             }
-            .whishHeadLine{
-                li{
-                    .icon{
-                        cursor: pointer;
-                        margin: 0px 5px;
-                        transform: scale(100%);
-                        transition: transform 0.3s ease-in-out;
-                        &:hover{
-                            transform: scale(103%);
-                            filter:drop-shadow(0 0 10px #696061);
-                        }
-                    }
-                }
-            }
+        }
+    }
+    #whishListSide{
+        display: none;
+        &:checked ~ .sectionWhishList{
+            transform: translate(100%);
         }
     }
     .menuSide{
@@ -188,5 +187,3 @@
         }
     }
 }
-
-
